--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@
 }
 
 header {
-    background-color: #100c0d;
+    background-color: #7e7b7c;
     width: 100%;
-    box-shadow: 3px 3px 3px #1a1a19; 
+    box-shadow: 3px 3px 3px #6d6b6b; 
 }
 
 body {
@@ -36,15 +36,15 @@ body {
 h2 {
     font-family: "RobotoCondensed-Bold";
     margin: 1%;
-    background-color: #100c0d;
-    box-shadow: 3px 3px 3px #1a1a19; 
+    background-color: #7e7b7c;
+    box-shadow: 3px 3px 3px #6d6b6b; 
     font-size: 2vw;
 }
 
 h3 {
     font-family: "RobotoCondensed-Bold";
     margin: 2%;
-    color: #221e1c;
+    color: #5f5b5a;
     font-size: 1.5vw;
 }
 
@@ -66,11 +66,11 @@ a:visited {
     text-decoration: none;
 }
 a:hover {
-    color: #221e1c;
+    color: #b1adab;
     text-decoration: underline;
 }
 a:active {
-    color: ##221e1c;
+    color: #6d6b6b;
     text-decoration: underline;
 }
 
@@ -104,7 +104,7 @@ a:active {
 .photo {
     width: 100%;
     height: 100%;
-    border: 5px solid #E3DCD2;
+    border: 5px solid #d2dde3;
 }
 
 .few-words-about-me {
@@ -151,7 +151,7 @@ a:active {
 .web-project1 {
     width: 100%;
     max-width: 800px;
-    border: 2px solid #E3DCD2
+    border: 2px solid #d2dde3
 }
 
 
